vendor/switchtec/inc/switchtec/switchtec.h

struct switchtec_dev;
/**
 * @brief The PCIe generations
 */
enum switchtec_gen {
	SWITCHTEC_GEN3,
	SWITCHTEC_GEN4,
	SWITCHTEC_GEN5,
	SWITCHTEC_GEN6,
	SWITCHTEC_GEN_UNKNOWN,
};
/**
 * @brief Device hardware revision
 */
enum switchtec_rev {
	SWITCHTEC_REVA = 0x0f,
	SWITCHTEC_REVB = 0x00,
	SWITCHTEC_REVC = 0x01,
	SWITCHTEC_REV_UNKNOWN = 0xff
};
/**
 * @brief Device boot phase
 */
enum switchtec_boot_phase {
	SWITCHTEC_BOOT_PHASE_BL1 = 1,
	SWITCHTEC_BOOT_PHASE_BL2,
	SWITCHTEC_BOOT_PHASE_FW,
	SWITCHTEC_BOOT_PHASE_UNKNOWN
};
/**
 * @brief The variant types of Switchtec device
 */
enum switchtec_variant {
	SWITCHTEC_PFX,
	SWITCHTEC_PFXL,
	SWITCHTEC_PFXI,
	SWITCHTEC_PSX,
	SWITCHTEC_PAX,
	SWITCHTEC_PAXA,
	SWITCHTEC_PFXA,
	SWITCHTEC_PSXA,
	SWITCHTEC_VAR_UNKNOWN,
};
/**
 * @brief Represents a Switchtec device in the switchtec_list() function
 */
struct switchtec_device_info {
	char name[256];		//!< Device name, eg. switchtec0
	char desc[256];		//!< Device description, if available
	char pci_dev[256];	//!< PCI BDF string
	char product_id[32];	//!< Product ID
	char product_rev[8];	//!< Product revision
	char fw_version[32];	//!< Firmware version
	char path[PATH_MAX];	//!< Path to the device
};
/**
 * @brief Port identification
 */
struct switchtec_port_id {
	unsigned char partition;	//!< Partition the port is in.
					/*!< May be SWITCHTEC_UNBOUND_PORT. */
	unsigned char stack;		//!< Stack number
	unsigned char upstream;		//!< 1 if this is an upstream port
	unsigned char stk_id;		//!< Port number within the stack
	unsigned char phys_id;		//!< Physical port number
	unsigned char log_id;		//!< Logical port number
};
/**
 * @brief Port status structure
 *
 * \p pci_dev, \p vendor_id, \p device_id and \p class_devices are populated by
 * switchtec_get_devices(). These are only available in Linux.
 */
struct switchtec_status {
	struct switchtec_port_id port;	//!< Port ID
	unsigned char cfg_lnk_width;	//!< Configured link width
	unsigned char neg_lnk_width;	//!< Negotiated link width
	unsigned char link_up;		//!< 1 if the link is up
	unsigned char link_rate;	//!< Link rate/gen
	uint16_t ltssm;			//!< Link state
	const char *ltssm_str;		//!< Link state as a string
	unsigned char lane_reversal;	//!< Lane reversal
	const char *lane_reversal_str;	//!< Lane reversal as a string
	unsigned char first_act_lane;	//!< First active lane
	char lanes[17];

	char *pci_bdf;			//!< PCI BDF of the port
	char *pci_bdf_path;		//!< PCI BDF path of the port

	char *pci_dev;			//!< PCI BDF of the device on the port
	int vendor_id;			//!< Vendor ID
	int device_id;			//!< Device ID
	char *class_devices;		//!< Comma seperated list of classes
	unsigned int acs_ctrl;		//!< ACS Setting of the Port
};
enum switchtec_fw_type {
	SWITCHTEC_FW_TYPE_UNKNOWN = 0,
	SWITCHTEC_FW_TYPE_BOOT,
	SWITCHTEC_FW_TYPE_MAP,
	SWITCHTEC_FW_TYPE_IMG,
	SWITCHTEC_FW_TYPE_CFG,
	SWITCHTEC_FW_TYPE_NVLOG,
	SWITCHTEC_FW_TYPE_SEEPROM,
	SWITCHTEC_FW_TYPE_KEY,
	SWITCHTEC_FW_TYPE_BL2,
	SWITCHTEC_FW_TYPE_RIOT,
};
/* @brief
*    Gen6 FW read FW-types
*
* @note
*   These mrpc fw types are aligned to device fw types currently
*   but that is not required and may diverge in the future.
*   Intention is to keep the mrpc consistent over several generations
*   of devices even if device fw types change.
*/
enum switchtec_fw_type_gen6 {
	SWITCHTEC_IMG_PART_TYPE_MAP = 0,         /**< partition map partition */
	SWITCHTEC_IMG_PART_TYPE_KMT = 1,         /**< key manifest table */
	SWITCHTEC_IMG_PART_TYPE_BL2 = 2,         /**< bootloader 2 partition */
	SWITCHTEC_IMG_PART_TYPE_DATA = 3,        /**< configuration file partition */
	SWITCHTEC_IMG_PART_TYPE_FW = 4,          /**< main firmware image partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_5 = 5,      /**< reserved partition */
	SWITCHTEC_IMG_PART_TYPE_CERT = 6,        /**< Cert partition */
	SWITCHTEC_IMG_PART_TYPE_DEBUG_TOKEN = 7, /**< Debug token partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_8 = 8,      /**< reserved partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_9 = 9,      /**< reserved partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_10 = 10,    /**< reserved partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_11 = 11,    /**< reserved partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_12 = 12,    /**< reserved partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_13 = 13,    /**< reserved partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_14 = 14,    /**< reserved partition */
	SWITCHTEC_IMG_PART_TYPE_RSVD_15 = 15,    /**< reserved partition */

	SWITCHTEC_IMG_PART_TYPE_NUM,     /**< Number of active partition names in partition map */
};
/**
 * @brief Information about a firmware image or partition
 */
struct switchtec_fw_image_info {
	enum switchtec_gen gen;			//!< Image generation
	unsigned long part_id;			//!< Image partition ID
	enum switchtec_fw_type type;		//!< Image partition type
	char version[32];			//!< Firmware/Config version
	size_t part_addr;			//!< Address of the partition
	size_t part_len;			//!< Length of the partition
	size_t part_body_offset;		//!< Partition image body offset
	size_t image_len;			//!< Length of the image
	unsigned long image_crc;		//!< CRC checksum of the image

	bool valid;
	bool active;
	bool running;
	bool read_only;

	struct switchtec_fw_image_info *next;
	void *metadata;

	unsigned long secure_version;
	bool signed_image;
	uint8_t redundant;
};
struct switchtec_fw_part_summary {
	struct switchtec_fw_part_type {
		struct switchtec_fw_image_info *active, *inactive;
	} boot, map, img, cfg, nvlog, seeprom, key, bl2, riot;

	struct switchtec_fw_image_info *mult_cfg;

	int nr_info;
	struct switchtec_fw_image_info all[];
};
/**
 * @brief Event summary bitmaps
 */
struct switchtec_event_summary {
	uint64_t global;	//!< Bitmap of global events
	uint64_t part_bitmap;	//!< Bitmap of partitions with active events
	unsigned local_part;	//!< Bitmap of events in the local partition

	/** @brief Bitmap of events in each partition */
	unsigned part[SWITCHTEC_MAX_PARTS];

	/** @brief Bitmap of events in each port function */
	unsigned pff[SWITCHTEC_MAX_PFF_CSR];
};
/**
 * @brief Enumeration of all possible events
 */
enum switchtec_event_id {
	SWITCHTEC_EVT_INVALID = -1,
	SWITCHTEC_GLOBAL_EVT_STACK_ERROR,
	SWITCHTEC_GLOBAL_EVT_PPU_ERROR,
	SWITCHTEC_GLOBAL_EVT_ISP_ERROR,
	SWITCHTEC_GLOBAL_EVT_SYS_RESET,
	SWITCHTEC_GLOBAL_EVT_FW_EXC,
	SWITCHTEC_GLOBAL_EVT_FW_NMI,
	SWITCHTEC_GLOBAL_EVT_FW_NON_FATAL,
	SWITCHTEC_GLOBAL_EVT_FW_FATAL,
	SWITCHTEC_GLOBAL_EVT_TWI_MRPC_COMP,
	SWITCHTEC_GLOBAL_EVT_TWI_MRPC_COMP_ASYNC,
	SWITCHTEC_GLOBAL_EVT_CLI_MRPC_COMP,
	SWITCHTEC_GLOBAL_EVT_CLI_MRPC_COMP_ASYNC,
	SWITCHTEC_GLOBAL_EVT_GPIO_INT,
	SWITCHTEC_GLOBAL_EVT_GFMS,
	SWITCHTEC_PART_EVT_PART_RESET,
	SWITCHTEC_PART_EVT_MRPC_COMP,
	SWITCHTEC_PART_EVT_MRPC_COMP_ASYNC,
	SWITCHTEC_PART_EVT_DYN_PART_BIND_COMP,
	SWITCHTEC_PFF_EVT_AER_IN_P2P,
	SWITCHTEC_PFF_EVT_AER_IN_VEP,
	SWITCHTEC_PFF_EVT_DPC,
	SWITCHTEC_PFF_EVT_CTS,
	SWITCHTEC_PFF_EVT_UEC,
	SWITCHTEC_PFF_EVT_HOTPLUG,
	SWITCHTEC_PFF_EVT_IER,
	SWITCHTEC_PFF_EVT_THRESH,
	SWITCHTEC_PFF_EVT_POWER_MGMT,
	SWITCHTEC_PFF_EVT_TLP_THROTTLING,
	SWITCHTEC_PFF_EVT_FORCE_SPEED,
	SWITCHTEC_PFF_EVT_CREDIT_TIMEOUT,
	SWITCHTEC_PFF_EVT_LINK_STATE,
	SWITCHTEC_MAX_EVENTS,
};
/*********** Platform Functions ***********/

struct switchtec_dev *switchtec_open(const char *device);
struct switchtec_dev *switchtec_open_by_index(int index);
struct switchtec_dev *switchtec_open_by_pci_addr(int domain, int bus,
						 int device, int func);
void switchtec_close(struct switchtec_dev *dev);
int switchtec_list(struct switchtec_device_info **devlist);
void switchtec_list_free(struct switchtec_device_info *devlist);
int switchtec_get_fw_version(struct switchtec_dev *dev, char *buf,
			     size_t buflen);
int switchtec_cmd(struct switchtec_dev *dev, uint32_t cmd,
		  const void *payload, size_t payload_len, void *resp,
		  size_t resp_len);
int switchtec_get_devices(struct switchtec_dev *dev,
			  struct switchtec_status *status,
			  int ports);
int switchtec_pff_to_port(struct switchtec_dev *dev, int pff,
			  int *partition, int *port);
int switchtec_port_to_pff(struct switchtec_dev *dev, int partition,
			  int port, int *pff);
int switchtec_event_summary(struct switchtec_dev *dev,
			    struct switchtec_event_summary *sum);
int switchtec_event_ctl(struct switchtec_dev *dev,
			enum switchtec_event_id e,
			int index, int flags,
			uint32_t data[5]);
int switchtec_event_wait(struct switchtec_dev *dev, int timeout_ms);
/*********** Generic Accessors ***********/

_PURE const char *switchtec_name(struct switchtec_dev *dev);
_PURE int switchtec_partition(struct switchtec_dev *dev);
_PURE int switchtec_device_id(struct switchtec_dev *dev);
_PURE enum switchtec_gen switchtec_gen(struct switchtec_dev *dev);
_PURE enum switchtec_variant switchtec_variant(struct switchtec_dev *dev);
_PURE enum switchtec_boot_phase
switchtec_boot_phase(struct switchtec_dev *dev);
int switchtec_fw_img_get(struct switchtec_dev *dev, int fd, 
						enum switchtec_fw_type_gen6 fw_type, int fw_slot, 
						void (*progress_callback)(int cur, int tot));
int switchtec_hard_reset(struct switchtec_dev *dev);
int switchtec_status(struct switchtec_dev *dev,
		     struct switchtec_status **status);
void switchtec_status_free(struct switchtec_status *status, int ports);
int switchtec_get_device_info(struct switchtec_dev *dev,
			      enum switchtec_boot_phase *phase,
			      enum switchtec_gen *gen,
			      enum switchtec_rev *rev);
const char *switchtec_strerror(void);
void switchtec_perror(const char *str);
float switchtec_die_temp(struct switchtec_dev *dev);
int switchtec_die_temps(struct switchtec_dev *dev, int nr_sensor,
			float *sensor_readings);
int switchtec_calc_lane_id(struct switchtec_dev *dev, int phys_port_id,
			   int lane_id, struct switchtec_status *port);
/**
 * @brief Flag which indicates if a partition is read-only or not
 */
enum switchtec_fw_ro {
	SWITCHTEC_FW_RW = 0,
	SWITCHTEC_FW_RO = 1,
};
int switchtec_fw_toggle_active_partition(struct switchtec_dev *dev,
					 int toggle_bl2, int toggle_key,
					 int toggle_fw, int toggle_cfg,
					 int toggle_riotcore);
int switchtec_fw_write_fd(struct switchtec_dev *dev, int img_fd,
			  int dont_activate, int force,
			  void (*progress_callback)(int cur, int tot));
int switchtec_fw_write_file(struct switchtec_dev *dev, FILE *fimg,
			    int dont_activate, int force,
			    void (*progress_callback)(int cur, int tot));
int switchtec_fw_read_fd(struct switchtec_dev *dev, int fd,
			 unsigned long addr, size_t len,
			 void (*progress_callback)(int cur, int tot));
int switchtec_fw_body_read_fd(struct switchtec_dev *dev, int fd,
			      struct switchtec_fw_image_info *info,
			      void (*progress_callback)(int cur, int tot));
int switchtec_fw_read(struct switchtec_dev *dev, unsigned long addr,
		      size_t len, void *buf);
const char *switchtec_fw_image_type(const struct switchtec_fw_image_info *info);
struct switchtec_fw_part_summary *
switchtec_fw_part_summary(struct switchtec_dev *dev);
void switchtec_fw_part_summary_free(struct switchtec_fw_part_summary *summary);
int switchtec_fw_is_boot_ro(struct switchtec_dev *dev);
int switchtec_fw_set_boot_ro(struct switchtec_dev *dev,
			     enum switchtec_fw_ro ro);
/********** BANDWIDTH COUNTER *********/

/**
 * @brief Bandwidth counter result struct
 */
struct switchtec_bwcntr_res {
	uint64_t time_us;		//!< Time (in microseconds)
	struct switchtec_bwcntr_dir {
		uint64_t posted;	//!< Posted TLP bytes
		uint64_t comp;		//!< Completion TLP bytes
		uint64_t nonposted;	//!< Non-Posted TLP bytes
	} egress, 			//!< Bandwidth out of the port
	  ingress;			//!< Bandwidth into the port
};
int switchtec_bwcntr_many(struct switchtec_dev *dev, int nr_ports,
			  int *phys_port_ids, int clear,
			  struct switchtec_bwcntr_res *res);
int switchtec_bwcntr_all(struct switchtec_dev *dev, int clear,
			 struct switchtec_port_id **ports,
			 struct switchtec_bwcntr_res **res);
int switchtec_lat_setup(struct switchtec_dev *dev, int egress_port_id,
			int ingress_port_id, int clear);
int switchtec_lat_get(struct switchtec_dev *dev, int clear,
		      int egress_port_ids, int *cur_ns,
		      int *max_ns);
struct switchtec_diag_cross_hair {
	enum switchtec_diag_cross_hair_state state;
	int lane_id;

	union {
		struct {
			/* Valid when state is Error */
			int prev_state;
			int x_pos;
			int y_pos;
		};
		/* Valid when state is DONE */
		struct {
			int eye_left_lim;
			int eye_right_lim;
			int eye_bot_left_lim;
			int eye_bot_right_lim;
			int eye_top_left_lim;
			int eye_top_right_lim;
		};
	};
};
enum switchtec_diag_eye_data_mode {
	SWITCHTEC_DIAG_EYE_RAW,
	SWITCHTEC_DIAG_EYE_RATIO,
};
int switchtec_diag_cross_hair_enable(struct switchtec_dev *dev, int lane_id);
int switchtec_diag_cross_hair_disable(struct switchtec_dev *dev);
int switchtec_diag_cross_hair_get(struct switchtec_dev *dev, int start_lane_id,
		int num_lanes, struct switchtec_diag_cross_hair *res);
int switchtec_diag_eye_set_mode(struct switchtec_dev *dev,
				enum switchtec_diag_eye_data_mode mode);