src/serialcables_switchtec/bindings/functions.py

"""Function prototypes (argtypes/restype) for the Switchtec C library.

Configures ctypes function signatures for type safety and proper
marshalling. Call setup_prototypes() after loading the library.
"""

from __future__ import annotations

import ctypes
from ctypes import (
    POINTER,
    c_char_p,
    c_double,
    c_float,
    c_int,
    c_size_t,
    c_uint8,
    c_uint16,
    c_uint32,
    c_uint64,
    c_void_p,
)

from serialcables_switchtec.bindings.types import (
    Range,
    SwitchtecBwCntrRes,
    SwitchtecDeviceInfo,
    SwitchtecDiagCrossHair,
    SwitchtecDiagLtssmLog,
    SwitchtecEventSummary,
    SwitchtecFabPortConfig,
    SwitchtecFwImageInfo,
    SwitchtecGfmsBindReq,
    SwitchtecGfmsUnbindReq,
    SwitchtecPortEqCoeff,
    SwitchtecPortEqTable,
    SwitchtecPortEqTxFslf,
    SwitchtecPortId,
    SwitchtecRcvrExt,
    SwitchtecRcvrObj,
    SwitchtecStatus,
)


def setup_prototypes(lib: ctypes.CDLL) -> None:
    """Configure all function prototypes on the loaded library.

    Args:
        lib: The loaded Switchtec CDLL instance.
    """
    _setup_platform_functions(lib)
    _setup_accessor_functions(lib)
    _setup_status_functions(lib)
    _setup_event_functions(lib)
    _setup_fw_functions(lib)
    _setup_bw_lat_functions(lib)
    _setup_diag_functions(lib)
    _setup_inject_functions(lib)
    _setup_osa_functions(lib)
    _setup_fabric_functions(lib)


def _setup_platform_functions(lib: ctypes.CDLL) -> None:
    """Platform functions: open, close, list."""

    # struct switchtec_dev *switchtec_open(const char *device)
    lib.switchtec_open.argtypes = [c_char_p]
    lib.switchtec_open.restype = c_void_p
    lib.switchtec_open.errcheck = None

    # struct switchtec_dev *switchtec_open_by_index(int index)
    lib.switchtec_open_by_index.argtypes = [c_int]
    lib.switchtec_open_by_index.restype = c_void_p

    # struct switchtec_dev *switchtec_open_by_pci_addr(int domain, int bus,
    #     int device, int func)
    lib.switchtec_open_by_pci_addr.argtypes = [c_int, c_int, c_int, c_int]
    lib.switchtec_open_by_pci_addr.restype = c_void_p

    # void switchtec_close(struct switchtec_dev *dev)
    lib.switchtec_close.argtypes = [c_void_p]
    lib.switchtec_close.restype = None

    # int switchtec_list(struct switchtec_device_info **devlist)
    lib.switchtec_list.argtypes = [POINTER(POINTER(SwitchtecDeviceInfo))]
    lib.switchtec_list.restype = c_int

    # void switchtec_list_free(struct switchtec_device_info *devlist)
    lib.switchtec_list_free.argtypes = [POINTER(SwitchtecDeviceInfo)]
    lib.switchtec_list_free.restype = None

    # int switchtec_get_fw_version(struct switchtec_dev *dev, char *buf,
    #     size_t buflen)
    lib.switchtec_get_fw_version.argtypes = [c_void_p, c_char_p, c_size_t]
    lib.switchtec_get_fw_version.restype = c_int

    # int switchtec_cmd(struct switchtec_dev *dev, uint32_t cmd,
    #     const void *payload, size_t payload_len, void *resp, size_t resp_len)
    lib.switchtec_cmd.argtypes = [c_void_p, c_uint32, c_void_p, c_size_t, c_void_p, c_size_t]
    lib.switchtec_cmd.restype = c_int

    # int switchtec_get_devices(struct switchtec_dev *dev,
    #     struct switchtec_status *status, int ports)
    lib.switchtec_get_devices.argtypes = [c_void_p, POINTER(SwitchtecStatus), c_int]
    lib.switchtec_get_devices.restype = c_int

    # int switchtec_pff_to_port(struct switchtec_dev *dev, int pff,
    #     int *partition, int *port)
    lib.switchtec_pff_to_port.argtypes = [c_void_p, c_int, POINTER(c_int), POINTER(c_int)]
    lib.switchtec_pff_to_port.restype = c_int

    # int switchtec_port_to_pff(struct switchtec_dev *dev, int partition,
    #     int port, int *pff)
    lib.switchtec_port_to_pff.argtypes = [c_void_p, c_int, c_int, POINTER(c_int)]
    lib.switchtec_port_to_pff.restype = c_int

    # const char *switchtec_strerror(void)
    lib.switchtec_strerror.argtypes = []
    lib.switchtec_strerror.restype = c_char_p

    # void switchtec_perror(const char *str)
    lib.switchtec_perror.argtypes = [c_char_p]
    lib.switchtec_perror.restype = None


def _setup_accessor_functions(lib: ctypes.CDLL) -> None:
    """Generic accessor functions: name, partition, device_id, etc."""

    # const char *switchtec_name(struct switchtec_dev *dev)
    lib.switchtec_name.argtypes = [c_void_p]
    lib.switchtec_name.restype = c_char_p

    # int switchtec_partition(struct switchtec_dev *dev)
    lib.switchtec_partition.argtypes = [c_void_p]
    lib.switchtec_partition.restype = c_int

    # int switchtec_device_id(struct switchtec_dev *dev)
    lib.switchtec_device_id.argtypes = [c_void_p]
    lib.switchtec_device_id.restype = c_int

    # enum switchtec_gen switchtec_gen(struct switchtec_dev *dev)
    lib.switchtec_gen.argtypes = [c_void_p]
    lib.switchtec_gen.restype = c_int

    # enum switchtec_variant switchtec_variant(struct switchtec_dev *dev)
    lib.switchtec_variant.argtypes = [c_void_p]
    lib.switchtec_variant.restype = c_int

    # enum switchtec_boot_phase switchtec_boot_phase(struct switchtec_dev *dev)
    lib.switchtec_boot_phase.argtypes = [c_void_p]
    lib.switchtec_boot_phase.restype = c_int


def _setup_status_functions(lib: ctypes.CDLL) -> None:
    """Status and temperature functions."""

    # int switchtec_status(struct switchtec_dev *dev,
    #     struct switchtec_status **status)
    lib.switchtec_status.argtypes = [c_void_p, POINTER(POINTER(SwitchtecStatus))]
    lib.switchtec_status.restype = c_int

    # void switchtec_status_free(struct switchtec_status *status, int ports)
    lib.switchtec_status_free.argtypes = [POINTER(SwitchtecStatus), c_int]
    lib.switchtec_status_free.restype = None

    # float switchtec_die_temp(struct switchtec_dev *dev)
    lib.switchtec_die_temp.argtypes = [c_void_p]
    lib.switchtec_die_temp.restype = c_float

    # int switchtec_die_temps(struct switchtec_dev *dev, int nr_sensor,
    #     float *sensor_readings)
    lib.switchtec_die_temps.argtypes = [c_void_p, c_int, POINTER(c_float)]
    lib.switchtec_die_temps.restype = c_int

    # int switchtec_get_device_info(struct switchtec_dev *dev,
    #     enum switchtec_boot_phase *phase, enum switchtec_gen *gen,
    #     enum switchtec_rev *rev)
    lib.switchtec_get_device_info.argtypes = [
        c_void_p,
        POINTER(c_int),
        POINTER(c_int),
        POINTER(c_int),
    ]
    lib.switchtec_get_device_info.restype = c_int

    # int switchtec_hard_reset(struct switchtec_dev *dev)
    lib.switchtec_hard_reset.argtypes = [c_void_p]
    lib.switchtec_hard_reset.restype = c_int

    # int switchtec_calc_lane_id(struct switchtec_dev *dev, int phys_port_id,
    #     int lane_id, struct switchtec_status *port)
    lib.switchtec_calc_lane_id.argtypes = [c_void_p, c_int, c_int, POINTER(SwitchtecStatus)]
    lib.switchtec_calc_lane_id.restype = c_int


def _setup_event_functions(lib: ctypes.CDLL) -> None:
    """Event handling functions."""

    # int switchtec_event_summary(struct switchtec_dev *dev,
    #     struct switchtec_event_summary *sum)
    lib.switchtec_event_summary.argtypes = [c_void_p, POINTER(SwitchtecEventSummary)]
    lib.switchtec_event_summary.restype = c_int

    # int switchtec_event_ctl(struct switchtec_dev *dev,
    #     enum switchtec_event_id e, int index, int flags, uint32_t data[5])
    lib.switchtec_event_ctl.argtypes = [c_void_p, c_int, c_int, c_int, POINTER(c_uint32)]
    lib.switchtec_event_ctl.restype = c_int

    # int switchtec_event_wait(struct switchtec_dev *dev, int timeout_ms)
    lib.switchtec_event_wait.argtypes = [c_void_p, c_int]
    lib.switchtec_event_wait.restype = c_int


def _setup_fw_functions(lib: ctypes.CDLL) -> None:
    """Firmware management functions."""

    # int switchtec_fw_toggle_active_partition(struct switchtec_dev *dev,
    #     int toggle_bl2, int toggle_key, int toggle_fw, int toggle_cfg,
    #     int toggle_riotcore)
    lib.switchtec_fw_toggle_active_partition.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
    ]
    lib.switchtec_fw_toggle_active_partition.restype = c_int

    # int switchtec_fw_read(struct switchtec_dev *dev, unsigned long addr,
    #     size_t len, void *buf)
    lib.switchtec_fw_read.argtypes = [c_void_p, ctypes.c_ulong, c_size_t, c_void_p]
    lib.switchtec_fw_read.restype = c_int

    # struct switchtec_fw_part_summary *
    # switchtec_fw_part_summary(struct switchtec_dev *dev)
    lib.switchtec_fw_part_summary.argtypes = [c_void_p]
    lib.switchtec_fw_part_summary.restype = c_void_p

    # void switchtec_fw_part_summary_free(
    #     struct switchtec_fw_part_summary *summary)
    lib.switchtec_fw_part_summary_free.argtypes = [c_void_p]
    lib.switchtec_fw_part_summary_free.restype = None

    # int switchtec_fw_is_boot_ro(struct switchtec_dev *dev)
    lib.switchtec_fw_is_boot_ro.argtypes = [c_void_p]
    lib.switchtec_fw_is_boot_ro.restype = c_int

    # int switchtec_fw_set_boot_ro(struct switchtec_dev *dev,
    #     enum switchtec_fw_ro ro)
    lib.switchtec_fw_set_boot_ro.argtypes = [c_void_p, c_int]
    lib.switchtec_fw_set_boot_ro.restype = c_int

    # const char *switchtec_fw_image_type(
    #     const struct switchtec_fw_image_info *info)
    lib.switchtec_fw_image_type.argtypes = [POINTER(SwitchtecFwImageInfo)]
    lib.switchtec_fw_image_type.restype = c_char_p


def _setup_bw_lat_functions(lib: ctypes.CDLL) -> None:
    """Bandwidth and latency counter functions."""

    # int switchtec_bwcntr_many(struct switchtec_dev *dev, int nr_ports,
    #     int *phys_port_ids, int clear, struct switchtec_bwcntr_res *res)
    lib.switchtec_bwcntr_many.argtypes = [
        c_void_p,
        c_int,
        POINTER(c_int),
        c_int,
        POINTER(SwitchtecBwCntrRes),
    ]
    lib.switchtec_bwcntr_many.restype = c_int

    # int switchtec_bwcntr_all(struct switchtec_dev *dev, int clear,
    #     struct switchtec_port_id **ports, struct switchtec_bwcntr_res **res)
    lib.switchtec_bwcntr_all.argtypes = [
        c_void_p,
        c_int,
        POINTER(POINTER(SwitchtecPortId)),
        POINTER(POINTER(SwitchtecBwCntrRes)),
    ]
    lib.switchtec_bwcntr_all.restype = c_int

    # int switchtec_lat_setup(struct switchtec_dev *dev, int egress_port_id,
    #     int ingress_port_id, int clear)
    lib.switchtec_lat_setup.argtypes = [c_void_p, c_int, c_int, c_int]
    lib.switchtec_lat_setup.restype = c_int

    # int switchtec_lat_get(struct switchtec_dev *dev, int clear,
    #     int egress_port_ids, int *cur_ns, int *max_ns)
    lib.switchtec_lat_get.argtypes = [c_void_p, c_int, c_int, POINTER(c_int), POINTER(c_int)]
    lib.switchtec_lat_get.restype = c_int


def _setup_diag_functions(lib: ctypes.CDLL) -> None:
    """Diagnostic functions: eye, ltssm, loopback, pattern, rcvr, eq, crosshair."""

    # ── Cross Hair ──
    lib.switchtec_diag_cross_hair_enable.argtypes = [c_void_p, c_int]
    lib.switchtec_diag_cross_hair_enable.restype = c_int

    lib.switchtec_diag_cross_hair_disable.argtypes = [c_void_p]
    lib.switchtec_diag_cross_hair_disable.restype = c_int

    lib.switchtec_diag_cross_hair_get.argtypes = [
        c_void_p,
        c_int,
        c_int,
        POINTER(SwitchtecDiagCrossHair),
    ]
    lib.switchtec_diag_cross_hair_get.restype = c_int

    # ── Eye Diagram ──
    lib.switchtec_diag_eye_set_mode.argtypes = [c_void_p, c_int]
    lib.switchtec_diag_eye_set_mode.restype = c_int
